Bug 157403 - UI: Navigator in Sidebar does not show new slide/page or objects after file reload (Impress/Draw)
Summary: UI: Navigator in Sidebar does not show new slide/page or objects after file r...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.0.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2023-09-23 21:29 UTC by Gilward Kukel
Modified: 2024-04-16 02:39 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gilward Kukel 2023-09-23 21:29:01 UTC
Description:
Impress/Draw: Navigator in Sidebar does not show new slide/page after file reload.

Steps to Reproduce:
1. Make a new Impress or Draw file and save it.
2. Open the Navigator in the Sidebar.
3. Reload the file.
4. Insert a new slide or page.

Actual Results:
Navigator does not show the new slide/page.

Expected Results:
Navigator should show the new slide/page.


Reproducible: Always


User Profile Reset: No

Additional Info:
It works again when you close and open the Sidebar, or when you close and open the file.

It works with the separate Navigator.

Version: 7.6.0.3 (X86_64) / LibreOffice Community
Build ID: 69edd8b8ebc41d00b4de3915dc82f8f0fc3b6265
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-AT (de_AT); UI: de-DE
Calc: CL threaded
Comment 1 m_a_riosv 2023-09-25 17:19:39 UTC
Seems sometimes it takes a couple of seconds, but works for me with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b97f7b6bee733e108d8214d5387b2dc019d93d8f
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo
and
Version: 7.6.2.0.0+ (X86_64) / LibreOffice Community
Build ID: 0842e6ae7db830b7ccf540685174af101dc68bc0
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
and
Version: 7.6.1.2 (X86_64) / LibreOffice Community
Build ID: f5defcebd022c5bc36bbb79be232cb6926d8f674
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded

reproducible
Comment 2 Stéphane Guillou (stragu) 2023-10-09 19:49:10 UTC
Reproduced in:

Version: 7.6.2.1 (X86_64) / LibreOffice Community
Build ID: 56f7684011345957bbf33a7ee678afaf4d2ba333
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Does not refresh; double-clicking an element doesn't focus the corresponding slide.
Closing and reopening the sidebar, or saving the file, does not fix it.
Only closing and reopening the file resolves it.

Also reproduced in:

Version: 7.0.6.2
Build ID: 144abb84a525d8e30c9dbbefa69cbbf2d8d4ae3b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

and

Version: 6.0.0.3
Build ID: 64a0f66915f38c6217de274f0aa8e15618924765
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk2; 
Locale: en-AU (en_AU.UTF-8); Calc: group
Comment 3 Stéphane Guillou (stragu) 2023-10-10 10:11:53 UTC
According to linux-64-release bibisect repository, it started with libreoffice-6.0.0.0.beta1.
No repro at libreoffice-6.0.0.0.alpha1 (appart from a small delay in listing the new slide).
Comment 4 Stéphane Guillou (stragu) 2024-03-12 14:21:26 UTC
Bibisected with linux-64-6.0 repo to first bad build [1079d2c74a263ff851696ea6f9255de5c2795712] which points to:

commit 23467fa5cfa2feffbeba2177c0d393f8ebe1a0a3
author	Katarina Behrens 	Wed Oct 18 12:50:59 2017 +0200
committer	Katarina Behrens 	Sat Oct 21 15:02:50 2017 +0200
tdf#67770: Read/writer LastActiveDeck bits
Reviewed-on: https://gerrit.libreoffice.org/43493

Bubli, copying you in just in case, but I understand if it's too ancient to have a look at :)

Jim, you might have an idea?
Comment 5 Jim Raykowski 2024-04-04 02:12:38 UTC
I've been poking around the Draw/Impress Navigator code lately trying to improve some things. Here is a link to a patch that appears to make this bug go away:
https://gerrit.libreoffice.org/c/core/+/165767
Comment 6 Commit Notification 2024-04-12 04:13:46 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1dbe90cb078bddaf8bbd333823762744158c92bb

Resolves tdf#157403 sidebar SdNavigator does not show new slide/page

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Jim Raykowski 2024-04-12 04:19:00 UTC
Seems to work for me. Easy to revert if it is found to break something.
Comment 8 Commit Notification 2024-04-13 04:18:21 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/419fc9947bdcef8d5ef4e6305be62c07d0d0854a

Resolves tdf#157403 sidebar SdNavigator does not show new slide/page

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Stéphane Guillou (stragu) 2024-04-16 02:39:32 UTC
Fix verified in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8b599d60fef80039cdfe636a771c3fc8eb1028c3
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Thanks Jim!