Resolves tdf#157403 sidebar SdNavigator does not show new slide/page

after file reload

Change-Id: I8ba7ffac3c098cf388a67e3454c5986b5a8b1f3f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165767
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>